# runix-project

./: .gitignore  .gitmodules  HASKELL-PRIMER.md  README.md  agentic-runix.md  builder.nix  cabal.project  code-mvp.md  flake.nix  templates.nix
apps/chatbot/: chatbot.cabal
apps/chatbot/src/: Main.hs
apps/helloworld/: helloworld.cabal
apps/helloworld/src/: Main.hs
apps/prompttuner/: prompttuner.cabal
apps/prompttuner/src/: Main.hs  Progress.hs
apps/prompttuner/src/Export/: Html.hs
apps/runix-code/: Agent.hs  DESIGN.md  LICENSE  Main.hs  Models.hs  Runner.hs  SECRETS.md  Tools.hs  runix-code.cabal
apps/runix-code/bench/: Main.hs
apps/runix-code/cli/: Main.hs
apps/runix-code/lib/: Agent.hs  Config.hs  GeneratedTools.hs  Models.hs  Runner.hs  Tools.hs
apps/runix-code/lib/UI/: UserInput.hs
apps/runix-code/prompt/: runix-code.md
apps/runix-code/test/: OutputHistorySpec.hs
apps/runix-code/tui/: Main.hs
apps/runix-code/tui/TUI/: InputPanel.hs  UI.hs
apps/runix-code/tui/TUI/Widgets/: MessageHistory.hs
apps/runix-code/tui/UI/: Attributes.hs  Effects.hs  Interpreter.hs  LoggingInterpreter.hs  OutputHistory.hs  Rendering.hs  State.hs  UserInput.hs
apps/runix-code/tui/UI/UserInput/: InputWidget.hs  Interpreter.hs
libs/runix-skill/: runix-skill.cabal
libs/runix-skill/src/Runix/: Skill.hs
libs/runix-skill/src/Runix/Skill/: CacheLLM.hs  PromptLoader.hs  TestHarness.hs  Testing.hs
libs/sse-parser/: sse-parser.cabal
libs/sse-parser/src/Network/: SSE.hs
libs/sse-parser/test/: Main.hs  SSESpec.hs
skills/cron/: README.md  cron-skill.cabal
skills/cron/prompts/: agent.md
skills/cron/src/Cron/: Effect.hs  InMemory.hs  Interpreter.hs  Prompt.hs  Skill.hs  Tools.hs
skills/cron/test/: Main.hs
skills/cron/test/Cron/: IntegrationSpec.hs  InterpreterSpec.hs  MockedSpec.hs  SkillSpec.hs
skills/example/: README.md  example-skill.cabal
skills/example/prompts/: agent.md
skills/example/src/Skill/: Example.hs
skills/example/src/Skill/Example/: Prompt.hs
skills/example/test/: Main.hs
tasks/dndwiki/: README.md  dndwiki.cabal  flake.nix
tasks/dndwiki/src/: Dndwiki.hs  Wiki.hs
templates/multi-cli/: __appName__.cabal  flake.nix
templates/multi-cli/src/: Main.hs
templates/single-cli/: __appName__.cabal  flake.nix
templates/single-cli/src/: Main.hs
templates/task/: __taskName__.cabal  flake.nix
templates/task/src/: __TaskName__.hs
