cabal-version: 2.4
name: chatbot
version: 1.0.0
synopsis: Chat interface CLI app for chatbot
description: A chat interface CLI application built with Runix
author: Generated
license: MIT

executable chatbot
  main-is: Main.hs
  build-depends:
    base >= 4.14,
    runix,
    polysemy,
    aeson,
    bytestring,
    text,
    autodocodec,
    autodocodec-schema,
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
  default-extensions:
    DeriveGeneric,
    DeriveAnyClass,
    OverloadedStrings,
    GADTs,
    DataKinds,
    TypeOperators,
    FlexibleContexts