cabal-version: 2.4
name: helloworld
version: 1.0.0
synopsis: Single-task CLI app for helloworld
description: A single-task CLI application built with Runix
author: Generated
license: MIT

executable helloworld
  main-is: Main.hs
  build-depends:
    base >= 4.14,
    runix,
    polysemy,
    aeson,
    bytestring,
    text,
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
  default-extensions:
    DeriveGeneric,
    DeriveAnyClass,
    OverloadedStrings,
    GADTs,
    DataKinds,
    TypeOperators,
    FlexibleContexts
