cabal-version: 3.0
name:          prompttuner
version:       0.1.0.0
synopsis:      LLM sycophancy exploiter — tunes a pitch until an independent evaluator calls it brilliant
license:       GPL-3.0-or-later
author:        Runix Contributors
maintainer:    runix@example.com
build-type:    Simple

common warnings
    ghc-options: -Wall
                 -Wcompat
                 -Widentities
                 -Wincomplete-uni-patterns
                 -Wincomplete-record-updates
                 -Wredundant-constraints
                 -Wnoncanonical-monad-instances

common extensions
    default-extensions:
        AllowAmbiguousTypes
        DataKinds
        DerivingStrategies
        FlexibleContexts
        FlexibleInstances
        GADTs
        LambdaCase
        MultiParamTypeClasses
        OverloadedStrings
        RankNTypes
        ScopedTypeVariables
        TypeApplications
        TypeFamilies
        TypeOperators

executable prompttuner
    import:           warnings, extensions
    main-is:          Main.hs

    build-depends:    base >=4.17 && <5
                    , runix
                    , runix-code
                    , universal-llm
                    , polysemy >=1.9
                    , text >=2.0
                    , mustache
                    , bytestring
                    , optparse-applicative

    other-modules:    Progress
                    , Export.Html

    hs-source-dirs:   src
    default-language: Haskell2010
