cabal-version:      3.0
name:               runix-code
version:            0.1.0.0
synopsis:           AI coding assistant built on Runix
description:
  Runix Code is a Claude Code clone with self-improvement capabilities,
  built on the Runix task automation framework.

  Features:
  - Type-safe tool calling via Polysemy effects
  - Self-improving agent (can generate and integrate new tools)
  - Effect-based security (compile-time guarantees)
  - Multi-provider LLM support

license:            MIT
license-file:       LICENSE
author:             Runix Contributors
maintainer:         runix@example.com
copyright:          2025 Runix Contributors
category:           Development
build-type:         Simple
extra-doc-files:    DESIGN.md, SECRETS.md

common warnings
    ghc-options: -Wall
                 -Wcompat
                 -Widentities
                 -Wincomplete-uni-patterns
                 -Wincomplete-record-updates
                 -Wredundant-constraints
                 -Wnoncanonical-monad-instances
                 -Wmissing-export-lists
                 -Wpartial-fields
                 -Wmissing-deriving-strategies

common extensions
    default-extensions:
        DataKinds
        DerivingStrategies
        DerivingVia
        FlexibleContexts
        FlexibleInstances
        GADTs
        LambdaCase
        MultiParamTypeClasses
        OverloadedStrings
        RankNTypes
        ScopedTypeVariables
        TypeApplications
        TypeFamilies
        TypeOperators

library
    import:           warnings, extensions
    exposed-modules:  Agent
                    , Tools
                    , Models
                    , Config
                    , Runner

    build-depends:    base >=4.17 && <5
                    , runix
                    , universal-llm
                    , polysemy >=1.9
                    , text >=2.0
                    , autodocodec >=0.2
                    , aeson
                    , bytestring
                    , vector
                    , directory

    hs-source-dirs:   lib
    default-language: Haskell2010

executable runix-code
    import:           warnings, extensions
    main-is:          Main.hs

    build-depends:    base >=4.17 && <5
                    , runix-code
                    , runix
                    , universal-llm
                    , polysemy >=1.9
                    , text >=2.0

    hs-source-dirs:   cli
    default-language: Haskell2010

executable runix-code-tui
    import:           warnings, extensions
    main-is:          Main.hs
    ghc-options:      -threaded

    build-depends:    base >=4.17 && <5
                    , runix-code
                    , runix
                    , universal-llm
                    , polysemy >=1.9
                    , text >=2.0
                    , brick >=2.0
                    , vty >=6.0
                    , vty-crossplatform
                    , microlens
                    , microlens-mtl
                    , text-zipper

    hs-source-dirs:   tui
    default-language: Haskell2010

-- Vty version removed - brick provides better abstraction for our use case
-- The raw vty exploration showed it doesn't offer advantages over brick:
-- - No scrollback (both use alternate screen)
-- - Manual layout management needed
-- - Would need to reimplement editor, dialogs, etc.
-- Keeping this comment for future reference.
