cabal-version:      3.0
name:               runix-code
version:            0.1.0.0
synopsis:           AI coding assistant built on Runix
description:
  Runix Code is a Claude Code clone with self-improvement capabilities,
  built on the Runix task automation framework.

  Features:
  - Type-safe tool calling via Polysemy effects
  - Self-improving agent (can generate and integrate new tools)
  - Effect-based security (compile-time guarantees)
  - Multi-provider LLM support

license:            MIT
license-file:       LICENSE
author:             Runix Contributors
maintainer:         runix@example.com
copyright:          2025 Runix Contributors
category:           Development
build-type:         Simple
extra-doc-files:    DESIGN.md, SECRETS.md

common warnings
    ghc-options: -Wall
                 -Wcompat
                 -Widentities
                 -Wincomplete-uni-patterns
                 -Wincomplete-record-updates
                 -Wredundant-constraints
                 -Wnoncanonical-monad-instances
                 -Wmissing-export-lists
                 -Wpartial-fields
                 -Wmissing-deriving-strategies

common extensions
    default-extensions:
        AllowAmbiguousTypes
        DataKinds
        DerivingStrategies
        DerivingVia
        FlexibleContexts
        FlexibleInstances
        GADTs
        LambdaCase
        MultiParamTypeClasses
        OverloadedStrings
        RankNTypes
        ScopedTypeVariables
        TypeApplications
        TypeFamilies
        TypeOperators

library
    import:           warnings, extensions
    exposed-modules:  Agent
                    , Tools
                    , Models
                    , Config
                    , Runner
                    , UI.UserInput

    build-depends:    base >=4.17 && <5
                    , runix
                    , universal-llm
                    , polysemy >=1.9
                    , text >=2.0
                    , autodocodec >=0.2
                    , aeson
                    , bytestring
                    , vector
                    , directory

    hs-source-dirs:   lib
    default-language: Haskell2010

executable runix-code
    import:           warnings, extensions
    main-is:          Main.hs

    build-depends:    base >=4.17 && <5
                    , runix-code
                    , runix
                    , universal-llm
                    , polysemy >=1.9
                    , text >=2.0

    hs-source-dirs:   cli
    default-language: Haskell2010

executable runix-code-tui
    import:           warnings, extensions
    main-is:          Main.hs
    other-modules:    TUI.UI
                    , TUI.Widgets.MessageHistory
                    , TUI.InputPanel
                    , UI.Effects
                    , UI.State
                    , UI.Interpreter
                    , UI.LoggingInterpreter
                    , UI.OutputHistory
                    , UI.Rendering
                    , UI.Attributes
                    , UI.UserInput.InputWidget
                    , UI.UserInput.Interpreter
    ghc-options:      -threaded

    build-depends:    base >=4.17 && <5
                    , runix-code
                    , runix
                    , universal-llm
                    , polysemy >=1.9
                    , text >=2.0
                    , brick >=2.0
                    , vty >=6.0
                    , vty-crossplatform
                    , microlens
                    , microlens-mtl
                    , text-zipper
                    , stm
                    , pandoc >=3.0
                    , pandoc-types >=1.23
                    , ansi-terminal >=1.0
                    , skylighting >=0.14
                    , containers
                    , bytestring

    hs-source-dirs:   tui
    default-language: Haskell2010

test-suite runix-code-test
    import:           warnings, extensions
    type:             exitcode-stdio-1.0
    main-is:          OutputHistorySpec.hs
    hs-source-dirs:   test, tui
    default-language: Haskell2010

    build-depends:    base >=4.17 && <5
                    , hspec >=2.11
                    , QuickCheck >=2.14
                    , text >=2.0
                    , brick >=2.0
                    , vty >=6.0
                    , pandoc >=3.0
                    , pandoc-types >=1.23
                    , universal-llm
                    , microlens
                    , skylighting >=0.14
                    , ansi-terminal >=1.0

    other-modules:    UI.OutputHistory
                    , UI.Rendering
                    , UI.Attributes

-- Vty version removed - brick provides better abstraction for our use case
-- The raw vty exploration showed it doesn't offer advantages over brick:
-- - No scrollback (both use alternate screen)
-- - Manual layout management needed
-- - Would need to reimplement editor, dialogs, etc.
-- Keeping this comment for future reference.

benchmark runix-code-bench
    import:           warnings, extensions
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   bench, tui
    default-language: Haskell2010
    ghc-options:      -O2 -threaded -rtsopts -with-rtsopts=-N

    build-depends:    base >=4.17 && <5
                    , runix-code
                    , universal-llm
                    , criterion >=1.6
                    , text >=2.0
                    , brick >=2.0
                    , vty >=6.0
                    , pandoc >=3.0
                    , pandoc-types >=1.23
                    , skylighting >=0.14
                    , microlens
                    , containers
                    , deepseq
                    , stm

    -- Need access to TUI modules for benchmarking
    other-modules:    UI.Rendering
                    , UI.OutputHistory
                    , UI.Attributes
                    , UI.State
