cabal-version:      3.0
name:               sse-parser
version:            0.1.0.0
synopsis:           Server-Sent Events (SSE) decoding
description:
  A minimal, dependency-free implementation of the WHATWG Server-Sent Events
  specification (https://html.spec.whatwg.org/multipage/server-sent-events.html).
  .
  Supports incremental / streaming parsing: feed chunks as they arrive and
  consume complete events while buffering the remainder.
  .
  Currently implements decoding only.  The module structure is designed to
  accommodate encoding in the future without breaking the public API.

license:            Apache-2.0
license-file:       LICENSE
author:             Runix Contributors
maintainer:         runix@example.com
copyright:          2025 Runix Contributors
category:           Network, Streaming
build-type:         Simple

common warnings
    ghc-options: -Wall
                 -Wcompat
                 -Widentities
                 -Wincomplete-uni-patterns
                 -Wincomplete-record-updates
                 -Wredundant-constraints
                 -Wmissing-export-lists

library
    import:           warnings
    exposed-modules:  Network.SSE

    build-depends:    base     >= 4.17 && < 5
                    , bytestring
                    , text

    hs-source-dirs:   src
    default-language: Haskell2010

test-suite sse-parser-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    other-modules:    SSESpec
    hs-source-dirs:   test
    default-language: Haskell2010
    default-extensions: ScopedTypeVariables

    build-depends:    base     >= 4.17 && < 5
                    , sse-parser
                    , bytestring
                    , hspec    >= 2.11
                    , QuickCheck >= 2.14
