cabal-version: 2.4
name: __taskName__
version: 1.0.0
synopsis: __taskName__ task for Runix
description: A Runix task implementation
author: .newmind
license: MIT

library
  exposed-modules: 
    __TaskName__
  build-depends: 
    base >= 4.14,
    runix,
    polysemy,
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
  default-extensions:
    DeriveGeneric,
    DeriveAnyClass,
    OverloadedStrings,
    GADTs,
    DataKinds,
    TypeOperators,
    FlexibleContexts
